Upstep go to 1.23
And the tools needed for that (golangci/controller-gen/gotemplate)

--- a/charts/kafka-operator/crds/kafkatopics.yaml
+++ b/charts/kafka-operator/crds/kafkatopics.yaml
@@ -3,8 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.2
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.16.4
   name: kafkatopics.kafka.banzaicloud.io
 spec:
   group: kafka.banzaicloud.io
@@ -21,14 +20,19 @@ spec:
         description: KafkaTopic is the Schema for the kafkatopics API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -36,8 +40,9 @@ spec:
             description: KafkaTopicSpec defines the desired state of KafkaTopic
             properties:
               clusterRef:
-                description: ClusterReference states a reference to a cluster for
-                  topic/user provisioning
+                description: |-
+                  ClusterReference states a reference to a cluster for topic/user
+                  provisioning
                 properties:
                   name:
                     type: string
@@ -74,11 +79,10 @@ spec:
             description: KafkaTopicStatus defines the observed state of KafkaTopic
             properties:
               managedBy:
-                description: 'ManagedBy describes who is the manager of the Kafka
-                  topic. When its value is not "koperator" then modifications to the
-                  topic configurations of the KafkaTopic CR will not be propagated
-                  to the Kafka topic. Manager of the Kafka topic can be changed by
-                  adding the "managedBy: <manager>" annotation to the KafkaTopic CR.'
+                description: |-
+                  ManagedBy describes who is the manager of the Kafka topic.
+                  When its value is not "koperator" then modifications to the topic configurations of the KafkaTopic CR will not be propagated to the Kafka topic.
+                  Manager of the Kafka topic can be changed by adding the "managedBy: <manager>" annotation to the KafkaTopic CR.
                 type: string
               state:
                 description: TopicState defines the state of a KafkaTopic
