--- a/charts/kafka-operator/crds/kafkausers.yaml
+++ b/charts/kafka-operator/crds/kafkausers.yaml
@@ -3,8 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.2
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.16.4
   name: kafkausers.kafka.banzaicloud.io
 spec:
   group: kafka.banzaicloud.io
@@ -21,14 +20,19 @@ spec:
         description: KafkaUser is the Schema for the kafka users API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -42,8 +46,9 @@ spec:
                   or certificate signing request object
                 type: object
               clusterRef:
-                description: ClusterReference states a reference to a cluster for
-                  topic/user provisioning
+                description: |-
+                  ClusterReference states a reference to a cluster for topic/user
+                  provisioning
                 properties:
                   name:
                     type: string
@@ -59,10 +64,10 @@ spec:
                   type: string
                 type: array
               expirationSeconds:
-                description: expirationSeconds is the requested duration of validity
-                  of the issued certificate. The minimum valid value for expirationSeconds
-                  is 3600 i.e. 1h. When it is not specified the default validation
-                  duration is 90 days
+                description: |-
+                  expirationSeconds is the requested duration of validity of the issued certificate.
+                  The minimum valid value for expirationSeconds is 3600 i.e. 1h.
+                  When it is not specified the default validation duration is 90 days
                 format: int32
                 minimum: 3600
                 type: integer
