--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ charts/koperator/requirements.lock
 # Kubernetes Generated files - skip generated files, except for vendored files
 
 !vendor/**/zz_generated.*
+vendor/
 
 # editor and IDE paraphernalia
 .idea/*
