--- a/charts/kafka-operator/Chart.yaml
+++ b/charts/kafka-operator/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 name: kafka-operator
 version: 0.26.1
-description: kafka-operator manages Kafka deployments on Kubernetes
+description: Helm chart for kafka-operator to manage Kafka deployments on Kubernetes
 sources:
   - https://github.com/klarrio-oss/koperator
 appVersion: v0.26.1
