--- a/.github/workflows/release-chart.yaml
+++ b/.github/workflows/release-chart.yaml
@@ -4,7 +4,7 @@ on:
     branches:
     - master
     tags:
-    - 'v?[0-9]+.[0-9]+.[0-9]+'
+    - 'chart/**/[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   release:
